<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ObjemBezKoryNovy" >

    <Button
        android:id="@+id/btnUlozHodnotu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewVysledok"
        android:layout_centerVertical="true"
        android:onClick="onClickUlozHodnotu"
        android:text="@string/uloz_hodnotu" />

    <TextView
        android:id="@+id/textViewVysledok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextSirkaKmena"
        android:layout_marginTop="34dp" />

    <EditText
        android:id="@+id/editTextSirkaKmena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="phone|numberDecimal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextDlzkaKmena"
        android:text="@string/sirka_kmena" />

    <EditText
        android:id="@+id/editTextDlzkaKmena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:inputType="phone|numberDecimal" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerTypDreva"
        android:text="@string/dlzka_kmena" />

    <Spinner
        android:id="@+id/spinnerTypDreva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/meranieOdberatel_t"
        android:entries="@array/typ_dreva_array"
        android:prompt="@string/typ_dreva_key" />

    <TextView
        android:id="@+id/meranieNazov_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/meranie_nazov" />

    <TextView
        android:id="@+id/meranieNazov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/meranieNazov_t" />

    <TextView
        android:id="@+id/meranie_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/meranieNazov"
        android:visibility="gone" />

    <TextView
        android:id="@+id/meranieOdberatel_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/meranieNazov_t"
        android:text="@string/meranie_odberatel" />

    <TextView
        android:id="@+id/meranieOdberatel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/meranieNazov"
        android:layout_toRightOf="@+id/meranieOdberatel_t" />

    <TextView
        android:id="@+id/meranieCisloDokladu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/meranieNazov"
        android:layout_marginLeft="21dp"
        android:layout_toRightOf="@+id/textView2"
        android:singleLine="true"
        android:text="TextView" />

    <TextView
        android:id="@+id/objemSpoluTw_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/spinnerTypDreva"
        android:layout_toRightOf="@+id/textView1"
        android:text="Objem spolu:" />

    <TextView
        android:id="@+id/objemSpoluTw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/spinnerTypDreva"
        android:layout_alignTop="@+id/spinnerTypDreva"
        android:layout_toRightOf="@+id/meranieCisloDokladu"
        android:text="TextView" />

</RelativeLayout>